Done Bootstrap UTS

--- a/pendidikan/index.html
+++ b/pendidikan/index.html
@@ -33,9 +33,6 @@
                   <li><a class="dropdown-item" href="/tugas/">Tugas</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,5 +43,36 @@
       </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <h1>Pendidikan</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">No</th>
+          <th scope="col">Nama Sekolah</th>
+          <th scope="col">Tahun</th>
+          <th scope="col">Tempat</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td>SDK Santa Theresia</td>
+          <td>2014</td>
+          <td><a href="https://goo.gl/maps/gWC9WRzz52QaiE2QA" target="_blank"><button type="button" class="btn btn-link">Alamat</button></a></td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>SMPK Santo Mikhail</td>
+          <td>2017</td>
+          <td><a href=https://goo.gl/maps/F2x8RVgAUmUPUDHz9" target="_blank"><button type="button" class="btn btn-link">Alamat</button></a></td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>SMAN 4 Balikpapan</td>
+          <td>2020</td>
+          <td><a href="https://goo.gl/maps/73zYT2UEL6DBgfg89" target="_blank"><button type="button" class="btn btn-link">Alamat</button></a></td>
+        </tr>
+      </tbody>
+    </table>
+    
 </body>
 </html>
