--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Portofolio</a>
+          <a class="navbar-brand" href="#">Calvin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,9 +33,6 @@
                   <li><a class="dropdown-item" href="/tugas/">Tugas</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -45,5 +42,45 @@
         </div>
       </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" />
+    <div class="parallax awal">
+      <!-- isi content awal -->
+      <div class="isiawal">
+        <div class="isiawal tulisan">HELLO<br/>TRAVELLER</div>
+        <a href="https://www.instagram.com/clv_alv/" id="tombol">Contact me</a>
+      </div>
+    </div>
+    <div class="parallax content">
+      <!-- isi content tengah -->
+      <div class="isitengah">
+        <h2>About Me</h2>
+        <br /><br />
+        <p>
+          Nama saya adalah Yohanes Doroteus Calvin Alvianto dengan NIM 215314056<br>
+          Saya adalah mahasiswa Informatika Universitas Sanata Dharma, yang
+          memiliki hobby dalam melakukan desain dalam sebuah website maupun
+          aplikasi, dengan tekad belajar yang penuh yang dimiliki saat ini, saya
+          telah menguasai dasar dalam mengenal bahasa Java dan design GUI<br /><br />
+          “Sandika Galih Adalah Sandika Galih.” 
+          <br />
+          <p2>Calvin(2023)</p2>
+        </p>
+      </div>
+    </div>
+    <div class="parallax akhir">
+      <!-- isi content akhir -->
+      <br>
+      <br>
+      <div class="d-flex justify-content-center">
+        <div class="card mx-auto" style="width: 18rem;">
+        <img src="Carrosel1.png" class="card-img-top" alt="Car">
+        <div class="card-body">
+          <h5 class="card-title">Music GUI Project</h5>
+          <p class="card-text">Ini adalah satu dari beberapa project yang saya buat terkait pembelajaran saya selama berkuliah di Sanata Dharma.</p>
+          <a href="https://github.com/AlviZevalli/Music-GUI" class="btn btn-primary">Visit my GitHub</a>
+        </div>
+      </div>
+      </div>
+    </div>
 </body>
 </html>
