--- a/kisah/index.html
+++ b/kisah/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Story Page</title>
+    <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -33,9 +34,6 @@
                   <li><a class="dropdown-item" href="/tugas/">Tugas</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,5 +44,77 @@
       </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <h1>KisahKu</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card" style="width: 18rem;">
+        <div class="video-container">
+          <video controls autoplay muted>
+            <source src="Kuliah.mp4" type="video/mp4">
+            <source src="Kuliah.webm" type="video/webm">
+            <source src="Kuliah.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Mogok After Tawangmangu</h5>
+          <p class="card-text">Bantuin Erlang motornya mogok karena kerasnya Tawangmangu</p>
+          <button class="btn btn-primary like-btn">Like</button>
+        </div>
+      </div>
+      <br>
+      <div class="card" style="width: 18rem;">
+        <div class="video-container">
+          <video controls autoplay muted>
+            <source src="SMP.mp4" type="video/mp4">
+            <source src="SMP.mp4" type="video/webm">
+            <source src="SMP.mp4" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Kenangan SMP</h5>
+          <p class="card-text">Kenang-Kenangan SMP sebelum pisah kuliah semuanya.</p>
+          <button class="btn btn-primary like-btn">Like</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card" style="width: 18rem;">
+        <div class="video-container">
+          <video controls autoplay muted>
+            <source src="Balikpapan.mp4" type="video/mp4">
+            <source src="Balikpapan.mp4" type="video/webm">
+            <source src="Balikpapan.mp4" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Balikpapan</h5>
+          <p class="card-text">Bangun rumah buat ngumpul keluarga besar di kebun, makan bareng acara bareng.</p>
+          <button class="btn btn-primary like-btn">Like</button>
+        </div>
+      </div>
+      <br>
+      <div class="card" style="width: 18rem;">
+        <div class="image-container">
+          <img src="AfterMisa.jpeg" alt="After Misa">
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Misa Kamis Putih</h5>
+          <p class="card-text">Misa kamis putih pertama tanpa orang tua</p>
+          <button class="btn btn-primary like-btn">Like</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+    const likeBtns = document.querySelectorAll('.like-btn');
+    likeBtns.forEach(btn => {
+      btn.addEventListener('click', () => {
+        alert("Anda menyukai kenangan ini");
+      });
+    });
+  </script>
 </body>
 </html>
