--- a/tentang/index.html
+++ b/tentang/index.html
@@ -33,9 +33,6 @@
                   <li><a class="dropdown-item" href="/tugas/">Tugas</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,5 +43,28 @@
       </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <h1>Tentang</h1>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col align-self-start text-justify">
+          Semasa Balikpapan
+          <br>
+          Saya lahir dan besar di kota tercinta Balikpapan, dan lahir pada tanggal 28 Maret 2003
+          saya merupakan anak tunggal, semasa saya di Balikpapan saya bersekolah di SDK Santa Theresia,
+          SMPK Santo Mikael dan SMAN 4 Balikpapan di masa SMA saya menggambil fokus pada bagian IPA
+          karena mendengar desas-desus bahwa anak IPA yang nantinya semasa kuliah bisa menggambil
+          jurusan mana saja, banyak teman-teman saya yang berkuliah di Jogja juga sehingga terkadang
+          saya masih sering bermain bersama.
+      </div>
+      <div class="col align-self-center text-justify">
+          Semasa Jogja
+          <br>
+          Di Jogja ini saat ini saya sedang berkuliah dan menempuh semester 4 di Universitas Sanata Dharma,
+          Sanata Dharma bukan satu-satunya tempat dimana saya mencari ilmu dan bersosialisasi,
+          karena banyak juga teman saya berkuliah di tempat lain, maka kami sering berbagi cerita
+          terkait kehidupan kampus kami masing-masing, nantinya di masa mendatang semoga apa yang 
+          saya dapatkan selama di Jogja ini bisa saya bawa kembali ke kota kelahiran saya.
+      </div>
+      </div>
+    </div>
 </body>
 </html>
