--- a/tugas/index.html
+++ b/tugas/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media Page</title>
+    <title>Tugas Page</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -56,7 +56,15 @@
       </div>
       <div class="row">
         <div class="col-25">
-          <label for="numFields">Masukkan Jumlah</label>
+          <label for="email">Masukkan Email</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="email" name="Email" placeholder="Masukkan Email">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="numFields">Masukkan Jumlah Pilihan Hobi</label>
         </div>
         <div class="col-75">
           <input type="number" id="numFields" name="numFields" placeholder="Jumlah" min="1">
